This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - Config Tool:
            - make command line a textarea
            - use separate edit sessions for each user

2.20-2   Wed Mar 14 00:12:24 CET 2018
          - add optional debug switch for admin users
          - Config Tool:
            - fix error when saving from raw edit

2.20     Wed Mar  7 10:59:57 CET 2018
          - add support for ipv6 livestatus backends (#753)
          - add timeout for cookie authentication http sub request
          - add filter to notifications and history page
          - add filter to processinfo page
          - add new 'problems_limit' config option
          - support tls livestatus connections
          - fix occasional wrong redirects on page reloads (#776)
          - support unlimited backend section depth
          - Business Process:
            - fix save button in chrome (#786)
            - fix displaying configured eventhandler
          - LMD:
            - only restart lmd on timeouts when neccessary
            - support lmd federation mode
            - support lmd tls livestatus connections
          - Mobile:
            - implement remote filtering
            - add alerts and notifications button to extinfo page
          - Logcache:
            - speed up updates
          - Panorama:
            - save open tabs in cookies instead of the user profile
            - add quick filter for dashboard dropdown
          - Config Tool:
            - fix adding custom variables

2.18     Mon Dec 25 15:27:06 CET 2017
          - add new option 'commandline_obfuscate_pattern'
          - add python and go client to default cookie_auth_direct_agents
          - combine recurring downtimes for the same time into a single cron entry
          - fix listing service recurring downtimes (#766)
          - fix excel export button (#765)
          - Config Tool:
            - show summary prompt if a post_obj_save_cmd is set