@@ -3205,6 +3205,7 @@ sub _add_misc_details {
         $json->{'server_version'}       = $c->config->{'version'};
         $json->{'server_version'}      .= '~'.$c->config->{'branch'} if $c->config->{'branch'};
         $json->{'server_extra_version'} = $c->config->{'extra_version'};
+        $json->{'broadcasts'}           = Thruk::Utils::Broadcast::get_broadcasts($c, undef, undef, 1);
         $c->stats->profile(end => "_add_misc_details");
     }
     elsif($c->req->parameters->{'current_tab'}) {
